# cmake-project-1

./: README.md
app/: CMakeLists.txt  main.cpp
mathlib/: CMakeLists.txt
mathlib/include/mathlib/: MathFunctions.h
mathlib/src/: MathFunctions.cpp
